# chrome-vuln-scanner

./: README.md  pyproject.toml
chrome_vuln_scanner/: __main__.py  cli.py  logger.py  scanner.py  typing.py  utils.py  wrappers.py
chrome_vuln_scanner/devtools/: __init__.py  client.py  debug.py  typing.py
