[tool.poetry]
name = "chrome-vuln-scanner"
version = "0.1.0"
description = "Vulnerability Scanner for Chrome"
authors = ["s3rgeym <yamldeveloper@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chrome-vuln-scan = "chrome_vuln_scanner.cli:scan"
